Dockerize all services